# cookiecutter-python-project

./: .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yaml
