[tool.poetry]
name = "cookiecutter-python-project"
version = "0.1.0"
description = ""
authors = ["GiuseppeTT <g.tinti.tomio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"
pre-commit = "^2.13.0"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
